// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package agentsvr;

// The agent ervice definition.
service AgentSvr {
  // get route info 
  rpc GetRouteInfo (RouteInfoReq) returns (RouteInfoRsp) {}
}

// The request message 
message RouteInfoReq {
  string sServiceName = 1;
}

// The response message
message RouteInfoRsp {
  string sIp = 1;
  uint32 iPort = 2;
}
